<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="center" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="120dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Faramawy."/>


        <TextView
            android:id="@+id/tvAddressForShopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/rightAddress"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tvQualityForShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="h2"
            app:layout_constraintStart_toStartOf="@id/tvAddressForShopping"
            app:layout_constraintEnd_toEndOf="@id/tvAddressForShopping"
            app:layout_constraintTop_toBottomOf="@id/tvAddressForShopping"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/quality"/>

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonRegisterAccountOptions"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvQualityForShopping"
            app:layout_constraintStart_toStartOf="@id/tvQualityForShopping"
            app:layout_constraintEnd_toEndOf="@id/tvQualityForShopping"
            app:layout_constraintBottom_toBottomOf="parent"
            app:spinning_bar_color="@color/white"
            android:text="@string/register"/>

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonLoginAccountOptions"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/whiteButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions"
            app:layout_constraintStart_toStartOf="@id/tvQualityForShopping"
            app:layout_constraintEnd_toEndOf="@id/tvQualityForShopping"
            android:layout_marginTop="10dp"
            app:spinning_bar_color="@color/black"
            android:text="@string/login"/>








    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>